--- a/bilibili-express/package.json
+++ b/bilibili-express/package.json
@@ -5,7 +5,8 @@
   "main": "router.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server.js --presets es2015,stage-2"
+    "dev": "babel-node server.js --presets es2015,stage-2",
+    "start": "npm run dev"
   },
   "keywords": [],
   "author": "",
