引入自己发到npm上的包vue-alert-modal,替换原来本地引入的laoding框

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonp": "^0.2.1",
     "sass-resources-loader": "^2.0.1",
     "vue": "^2.5.2",
+    "vue-alert-modal": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
